# code-claw

./: .gitignore  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: __init__.py  api_models.py  config.py  db.py  main.py  models.py  project_service.py  runtime.py  runtime_models.py  runtime_protocols.py  services.py  sql_store.py  store.py
app/agent_runtime/: __init__.py  artifacts.py  event_broker.py  models.py  prompt_builder.py  protocols.py  runners.py  runtime.py  store.py  task_runtime.py  workspace.py
app/harness/: __init__.py  artifacts.py  event_broker.py  models.py  prompt_builder.py  protocols.py  runners.py  runtime.py  state.py  store.py  task_runtime.py  workspace.py
docs/: ARCHITECTURE_NOTES.md  CODEX_HARNESS_BOUNDARY.md  CONFIGURATION.md  IMPLEMENTATION_PROGRESS.md  PERSISTENCE_DECISION.md  PRD.md  PROJECT_REGISTRATION_PLAN.md  USAGE.md
migrations/: env.py
migrations/versions/: 0002_add_run_artifact_paths.py  0003_add_task_events_table.py  0004_add_task_mode.py  20260323_000001_create_runtime_tables.py
tests/: support.py  test_api.py  test_postgres_integration.py
tests/integration/: test_postgres_integration.py
tests/unit/: test_api.py  test_harness.py
